# backend/routes/userRoute.js
@@ -5,8 +5,7 @@ const userController = require('../controllers/userController');
 const { auth } = require('../middlewares');
 
 router.get('/profile/:userId', userController.getUserProfile)
-router.get('/updatePassword/:userId', auth, userController.updatePassword);
-
+router.post('/updatePassword/:userId', auth, userController.updatePassword);
 router.post('/createInvitation/:userInvitedId', auth, userController.createInvitation);
 router.post('/acceptInvitation', auth, userController.acceptInvitation);
 
